# fuel-dao-offchain-backend

./: .env.template  Cargo.toml  Dockerfile  Readme  Readme.md  \  build.rs  compose.yaml  default.nix  flake.nix  fly.toml
.github/workflows/: build-check.yaml  build-check.yml  deploy.yaml  deploy.yml  fly-deploy.yaml
did/: backend.did  canister_ids.json
src/lib/: config.rs  lib.rs
src/lib/canister/: canister.rs  mod.rs
src/lib/domain/transactions/: mod.rs  ports.rs  service.rs
src/lib/domain/transactions/models/: transaction.rs
src/lib/identity/: delegated_identity.rs  ic.rs  identity.rs  mod.rs
src/lib/inbound/: http.rs  mod.rs
src/lib/inbound/handlers/: create_transaction.rs  mod.rs
src/lib/outbound/: email_client.rs  ic_agent.rs  mod.rs  payment_client.rs  prometheus.rs
src/lib/utils/: mod.rs
